unpackaged/main/default/objects/Account_Product__c/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <label>Contract Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>