unpackaged/main/default/objects/Account_Product__c/fields/Product_Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Customer_Price__c</fullName>
    <label>Product Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>